# haskell-nullpointer

./: .travis.yml  LICENSE  README.md  acme-nullpointer.cabal  nullpointer.cabal
Data/: NullPointer.hs
test/: Main.hs
