name:                acme-nullpointer
version:             0.1.0.0
synopsis:            Null pointers in Haskell

description:         Tired of using Maybe? Wrapping values in Just makes you sick?
                     Missing your NullPointerExceptions?
                     Add null value to any data type using Data.NullPointer!

license:             BSD3
license-file:        LICENSE
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
tested-with:
    GHC==7.10.3
  , GHC==7.8.4
  , GHC==8.0.2
  , GHC==8.2.1

library
  exposed-modules:     Data.NullPointer
  build-depends:       base >=4.7 && <4.12, ghc-prim
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base, hspec, acme-nullpointer
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zyla/haskell-nullpointer
