name:                nullpointer
version:             0.1.0.0
synopsis:            Null pointers in Haskell

description:         Tired of using Maybe? Wrapping values in Just makes you sick?
                     Missing your NullPointerExceptions?
                     Data.NullPointer lets you have them in Haskell.
                     Add null value to any data type.

license:             BSD3
license-file:        LICENSE
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.NullPointer
  build-depends:       base >=4.7 && <4.10
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             test/Main.hs
  build-depends:       base, hspec
